# osc-grimoire

./: .gitignore  CHARTER.md  README.md  THIRD_PARTY_NOTICES.txt  osc-grimoire.spec  pyproject.toml
.github/workflows/: release.yml
docs/: INVESTIGATION.md
scripts/: build_release.ps1  download_release_models.py  osc_grimoire_overlay_entry.py
src/osc_grimoire/: __init__.py  __main__.py  audio_capture.py  audio_playback.py  calibration.py  cli.py  config.py  desktop_controller.py  desktop_ui.py  diagnostic_plots.py  faster_whisper_backends.py  gesture_capture.py  gesture_recognizer.py  openvr_overlay.py  openwakeword_backends.py  osc_input.py  osc_output.py  parakeet_ctc_backends.py  paths.py  spellbook.py  voice_embedding_backends.py  voice_features.py  voice_recognizer.py  waveform.py
src/osc_grimoire/assets/: actions.json  bindings_knuckles.json  bindings_oculus_touch.json  bindings_vive_controller.json
tests/: test_audio_capture.py  test_calibration.py  test_cli.py  test_desktop_controller.py  test_diagnostic_plots.py  test_gesture_capture.py  test_gesture_recognizer.py  test_openvr_overlay.py  test_osc_input.py  test_osc_output.py  test_paths.py  test_release_entrypoint.py  test_spellbook.py  test_voice_features.py  test_voice_fixtures.py  test_voice_recognizer.py
tests/fixtures/voice/alohomora/: voice_001.flac  voice_002.flac  voice_003.flac  voice_004.flac  voice_005.flac
tests/fixtures/voice/flipendo/: voice_001.flac  voice_002.flac  voice_003.flac  voice_004.flac  voice_005.flac
tests/fixtures/voice/lumos/: voice_001.flac  voice_002.flac  voice_003.flac  voice_004.flac  voice_005.flac
tests/fixtures/voice_negatives/: neg_001.flac  neg_002.flac  neg_003.flac  neg_004.flac  neg_005.flac  neg_006.flac  neg_007.flac  neg_008.flac  neg_009.flac  neg_010.flac
