[project]
name = "osc-grimoire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hiina", email = "hiina@hiina.space" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
osc-grimoire = "osc_grimoire:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
