[project]
name = "osc-grimoire"
version = "0.1.0"
description = "Local OpenVR overlay for VRChat spell-casting via voice and gesture recognition"
readme = "README.md"
authors = [
    { name = "Hiina", email = "hiina@hiina.space" }
]
requires-python = ">=3.13"
dependencies = [
    "sounddevice>=0.5.0",
    "soundfile>=0.13.0",
    "numpy>=2.0",
    "scipy>=1.15.0",
    "librosa>=0.11.0",
    "dtaidistance>=2.3.13",
    "keyboard>=0.13.5",
    "platformdirs>=4.5.0",
    "torch>=2.9.0",
    "transformers>=4.57.0",
    "matplotlib>=3.10.0",
    "psutil>=7.0.0",
    "imgui-bundle[glfw]>=1.92.0",
    "openvr>=2.12.1401",
    "pyopengl>=3.1",
]

[project.scripts]
osc-grimoire = "osc_grimoire:main"
osc-grimoire-ui = "osc_grimoire.desktop_ui:main"
osc-grimoire-overlay = "osc_grimoire.openvr_overlay:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.15.0",
    "ty>=0.0.1a22",
]
oww = [
    "onnxruntime>=1.23.0",
    "requests>=2.0",
    "scikit-learn>=1.0",
    "tqdm>=4.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider --basetemp=.pytest-tmp"
testpaths = ["tests"]
